ex01 create class

--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -5,25 +5,23 @@ CPP			:=	c++
 CPPFLAGS	:=	-Wall -Wextra -Werror
 RM			:=	rm -rf
 
-SRC_DIR		:=	src
-SRC_FILE	:=	megaphone.cpp
-SRC			:=	$(SRC_FILE:%=$(SRC_DIR)/%)
+SRC			:=	megaphone.cpp
 
 OBJ_DIR		:=	obj
-OBJ			:=	$(SRC_FILE:%.cpp=$(OBJ_DIR)/%.o)
+OBJ			:=	$(SRC:%.cpp=$(OBJ_DIR)/%.o)
 
 INC_DIR		:=	include
 INCLUDE		:=	-I$(INC_DIR)
 
 # RULES
-$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
+$(OBJ_DIR)/%.o: %.cpp
 		@mkdir -p $(OBJ_DIR)
-		$(CPP) $(CPPFLAGS) $(INCLUDE) -c $< -o $@
+		$(CPP) $(CPPFLAGS) -c $< -o $@
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
-		$(CPP) $(CPPFLAGS) $(INCLUDE) $(OBJ) -o $(NAME)
+		$(CPP) $(CPPFLAGS) $(OBJ) -o $(NAME)
 		@echo "\n$(GREEN)$(NAME) created!$(DEFAULT)\n"
 
 clean: 
@@ -36,7 +34,7 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re check
+.PHONY: all clean fclean re
 
 # COLORS
 RED		=	\033[1;31m
