add c98 ex02 done

--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -2,7 +2,7 @@
 NAME		:=	megaphone
 
 CPP			:=	c++
-CPPFLAGS	:=	-Wall -Wextra -Werror
+CPPFLAGS	:=	-Wall -Wextra -Werror -std=c++98
 RM			:=	rm -rf
 
 SRC			:=	megaphone.cpp
