--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -6,8 +6,7 @@ CPPFLAGS	:=	-Wall -Wextra -Werror -std=c++98
 RM			:=	rm -rf
 
 SRC			:=	Zombie.cpp \
-				newZombie.cpp \
-				randomChump.cpp \
+				zombieHorde.cpp \
 				main.cpp
 
 OBJ_DIR		:=	obj
