--- a/cpp01/ex05/Makefile
+++ b/cpp01/ex05/Makefile
@@ -1,11 +1,12 @@
 # SETUP
-NAME		:=	sed
+NAME		:=	harl
 
 CPP			:=	c++
 CPPFLAGS	:=	-Wall -Wextra -Werror -std=c++98
 RM			:=	rm -rf
 
-SRC			:=	main.cpp
+SRC			:=	main.cpp \
+				Harl.cpp
 
 OBJ_DIR		:=	obj
 OBJ			:=	$(SRC:%.cpp=$(OBJ_DIR)/%.o)
