cpp07 ex00 update

--- a/cpp07/ex00/Makefile
+++ b/cpp07/ex00/Makefile
@@ -5,8 +5,7 @@ CPP			:=	c++
 CPPFLAGS	:=	-Wall -Wextra -Werror
 RM			:=	rm -rf
 
-SRC			:=	Types.cpp \
-				main.cpp
+SRC			:=	main.cpp
 
 OBJ_DIR		:=	obj
 OBJ			:=	$(SRC:%.cpp=$(OBJ_DIR)/%.o)
