--- a/cpp07/ex01/Makefile
+++ b/cpp07/ex01/Makefile
@@ -2,7 +2,7 @@
 NAME		:=	iter
 
 CPP			:=	c++
-CPPFLAGS	:=	-Wall -Wextra -Werror
+CPPFLAGS	:=	-Wall -Wextra -Werror -std=c++98
 RM			:=	rm -rf
 
 SRC			:=	main.cpp
