--- a/cpp08/ex01/Makefile
+++ b/cpp08/ex01/Makefile
@@ -1,8 +1,8 @@
 # SETUP
-NAME		:=	functions
+NAME		:=	array
 
 CPP			:=	c++
-CPPFLAGS	:=	-Wall -Wextra -Werror -std=c++98
+CPPFLAGS	:=	-Wall -Wextra -Werror -g
 RM			:=	rm -rf
 
 SRC			:=	main.cpp
